--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@supabase-js/source": "github:supabase/supabase-js",
     "@supabase/supabase-js": "^2.90.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-calendar": "^6.0.0",
+    "react-dom": "^19.2.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -27,6 +30,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "vite": "^7.3.1"
   }
 }
