--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.12.0"
